--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             margin: 0 auto;
         }
     </style>
+
 <style>
 body {
     font-family: Arial, sans-serif;
@@ -191,132 +192,5 @@ button:hover {
             doc.save("relatorio_objetivos.pdf");
         }
     </script>
-</div>
-<style>
-  .dashboard-container {
-    max-width: 900px;
-    margin: 40px auto;
-    padding: 20px;
-    background: #ffffff;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-  }
-  .dashboard-container h2 {
-    text-align: center;
-    margin-bottom: 20px;
-    color: #333;
-  }
-  .dashboard-item {
-    margin-bottom: 20px;
-  }
-  .dashboard-item label {
-    font-weight: bold;
-    display: block;
-    margin-bottom: 5px;
-    color: #444;
-  }
-  .dashboard-item textarea {
-    width: 100%;
-    min-height: 80px;
-    padding: 10px;
-    font-size: 14px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    resize: vertical;
-  }
-  .dashboard-actions {
-    text-align: center;
-    margin-top: 30px;
-  }
-  .dashboard-actions button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 12px 24px;
-    margin: 5px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  .dashboard-actions button:hover {
-    background-color: #45a049;
-  }
-</style>
-<div class="dashboard-container">
-<h2>Dashboard de Objetivos Pessoais</h2>
-<form id="dashboardForm">
-<div class="dashboard-item">
-<label for="financas">Finanças</label>
-<textarea id="financas" name="financas"></textarea>
-</div>
-<div class="dashboard-item">
-<label for="saude">Saúde e Bem-estar</label>
-<textarea id="saude" name="saude"></textarea>
-</div>
-<div class="dashboard-item">
-<label for="relacionamentos">Relacionamentos</label>
-<textarea id="relacionamentos" name="relacionamentos"></textarea>
-</div>
-<div class="dashboard-item">
-<label for="espiritualidade">Espiritualidade</label>
-<textarea id="espiritualidade" name="espiritualidade"></textarea>
-</div>
-<div class="dashboard-item">
-<label for="conhecimento">Conhecimento</label>
-<textarea id="conhecimento" name="conhecimento"></textarea>
-</div>
-<div class="dashboard-item">
-<label for="profissional">Profissional e Carreira</label>
-<textarea id="profissional" name="profissional"></textarea>
-</div>
-<div class="dashboard-item">
-<label for="social">Social</label>
-<textarea id="social" name="social"></textarea>
-</div>
-<div class="dashboard-item">
-<label for="recreativo">Recreativo (Lazer e Hobbies)</label>
-<textarea id="recreativo" name="recreativo"></textarea>
-</div>
-<div class="dashboard-actions">
-<button onclick="exportarPDF()" type="button">Exportar para PDF</button>
-</div>
-</form>
-</div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-<script>
-  function exportarPDF() {
-    const { jsPDF } = window.jspdf;
-    const doc = new jsPDF();
-    doc.setFontSize(14);
-    doc.text("Relatório de Objetivos Pessoais", 105, 20, null, null, "center");
-
-    const campos = [
-      ["Finanças", document.getElementById("financas").value],
-      ["Saúde e Bem-estar", document.getElementById("saude").value],
-      ["Relacionamentos", document.getElementById("relacionamentos").value],
-      ["Espiritualidade", document.getElementById("espiritualidade").value],
-      ["Conhecimento", document.getElementById("conhecimento").value],
-      ["Profissional e Carreira", document.getElementById("profissional").value],
-      ["Social", document.getElementById("social").value],
-      ["Recreativo (Lazer e Hobbies)", document.getElementById("recreativo").value]
-    ];
-
-    let y = 30;
-    campos.forEach(([titulo, texto]) => {
-      doc.setFont(undefined, "bold");
-      doc.text(titulo, 10, y);
-      y += 7;
-      doc.setFont(undefined, "normal");
-      const linhas = doc.splitTextToSize(texto, 180);
-      doc.text(linhas, 10, y);
-      y += linhas.length * 7 + 5;
-      if (y > 270) {
-        doc.addPage();
-        y = 20;
-      }
-    });
-
-    doc.save("relatorio_objetivos.pdf");
-  }
-</script>
-</body>
+</div></body>
 </html>
